--- a/NewVisionPayment/NewVisionPayment.csproj
+++ b/NewVisionPayment/NewVisionPayment.csproj
@@ -29,4 +29,7 @@
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Shared\MyCustomTheme.cs" />
+  </ItemGroup>
 </Project>
