--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ $RECYCLE.BIN/
 *.user
 *.userosscache
 *.sln.docstates
+NewVisionPayment/appsettings.json*
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
